<resources>
    <string name="app_name">TeleTraderApp</string>
    <string name="name">Name</string>
    \
    <string name="settings">Settings</string>
    <string name="descending">Descending</string>
    <string name="unsorted">Unsorted</string>
    <string name="ascending">Ascending</string>
    <string name="isin">ISIN:</string>
    <string name="volume">Volume</string>
    <string name="last">Last</string>
    <string name="chg">Chg%</string>
    <string name="change">Change</string>
</resources>