<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="Refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ascending"
        android:title="@string/ascending"
        app:showAsAction="never" />
    <item
        android:id="@+id/descending"
        android:title="@string/descending"
        app:showAsAction="never" />
    <item
        android:id="@+id/unsorted"
        android:title="@string/unsorted"
        app:showAsAction="never" />
    <item
        android:id="@+id/change_last"
        android:title="Chg%, Last"
        app:showAsAction="never" />
    <item
        android:id="@+id/bid_ask"
        android:title="Bid/Ask, High/Low"
        app:showAsAction="never" />

</menu>

